@@ -1,3 +1,8 @@
+2013-01-19    <JIM@LS-RED>
+
+	* helloworld.s [https://sourceforge.net/p/spimsimulator/feature-requests/8/]:
+	Added hello world example
+
 2013-01-06    <JIM@LS-RED>
 
 	* spimview.cpp, console.cpp [http://sourceforge.net/p/spimsimulator/feature-requests/9/]:
